--- a/html/.env
+++ b/html/.env
@@ -1,6 +1,6 @@
 # input your environment variables
 
-MYSQL_IP=localhost
+MYSQL_IP=mysqlserverhost
 MYSQL_USER=userconnect
 MYSQL_PASS=zigali
 MYSQL_DBNAME=toolingdb
